--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
     <div class="col-md-8 mx-auto">
         <div class="alert alert-info">
             <h4>Objetivo del Sistema</h4>
-            <p>Optimizar el registro, control y análisis de materiales reciclables en el campus universitario, contribuyendo al cumplimiento del ODS 12.</p>
+            <p>Optimizar el registro, control y análisis de materiales reciclables en un campus universitario, contribuyendo al cumplimiento del ODS 12.</p>
             <hr>
             <p class="mb-0"><strong>Meta:</strong> Reducir en 30% los residuos no reciclados durante el primer año.</p>
         </div>
